--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "real",
   "dependencies": {
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
